manutenção para todas as atrações e refresh automatico

--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <div class="logo d-flex align-items-center">
-        <a href="index.html" class="d-flex align-items-center">
+        <a href="/" class="d-flex align-items-center">
           <img src="/img/disneylogo.png" alt="">
           <span class="d-none d-lg-block" style="font-size: 15px; margin-left: 5px; margin-right: 15px;">Walt Disney Management</span>
         </a>
