--- a/WaltDisneyManagement/src/main/resources/templates/park.html
+++ b/WaltDisneyManagement/src/main/resources/templates/park.html
@@ -566,6 +566,7 @@
 
                 <th:block th:each="history : ${maintenanceHistory}">
                   <div class="activity-item d-flex">
+                    <div class="activite-label" th:text="${history.date}"></div>
                     <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
                     <div class="activity-content" th:text="|${history.attraction} - ${history.description}|"></div>
                   </div><!-- End activity item-->
@@ -577,7 +578,6 @@
 
             </div>
 
-            </div>
           </div>
           <!-- End Recent Activity -->
 
