--- a/WaltDisneyManagement/src/main/resources/templates/attraction.html
+++ b/WaltDisneyManagement/src/main/resources/templates/attraction.html
@@ -456,12 +456,19 @@
                 <div class="card-body">
                   <h5 class="card-title">Duration</h5>
   
-                  <div class="d-flex align-items-center">
+                  <div th:if="${status == 'Open'}" class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                       <i class="bi bi-hourglass-split"></i>
                     </div>
                     <div class="ps-3">
-                      <h6 id="duration"></h6>  
+                      <h6 id="duration"></h6>
+                    </div>
+
+                  </div>
+
+                  <div th:if="${status == 'Closed'}" class="d-flex align-items-center">
+                    <div style="background-color: #00008b; color: #fff; padding: 10px; border-radius: 5px; text-align: center; font-weight: bold; font-size: 18px;">
+                      <p>Attraction Closed</p>
                     </div>
                   </div>
   
@@ -476,20 +483,15 @@
 
                 <div class="filter">
                   <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                      <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" href="#">Today</a></li>
-                    <li><a class="dropdown-item" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" href="#">This Year</a></li>
-                  </ul>
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Velocity <span>| Km/h</span> </h5>
 
-                  <div id="lineChart"></div>
+                  <div th:if="${status == 'Open'}" id="lineChart"></div>
+
+                  <div th:if="${status == 'Closed'}" style="background-color: #00008b; color: #fff; padding: 10px; border-radius: 5px; text-align: center; font-weight: bold; font-size: 18px; margin-top: 24px;">
+                    <p>Attraction Closed</p>
+                  </div>
 
 
                 </div>
@@ -516,7 +518,12 @@
                 <div class="card-body">
                   <h5 class="card-title">People in Queue <span>| Now</span> </h5>
 
-                  <div id="areaChart"></div>
+                  <div th:if="${status == 'Closed'}" style="background-color: #00008b; color: #fff; padding: 10px; border-radius: 5px; text-align: center; text-align: center; font-weight: bold;">
+                    <p>Attraction Closed</p>
+                  </div>
+
+
+                  <div th:if="${status == 'Open'}" id="areaChart"></div>
 
                 </div>
               </div>
@@ -530,7 +537,11 @@
                 <div class="card-body">
                   <h5 class="card-title">Other Parameters<span> | Now</span></h5>
 
-                  <div id="barChart"></div>
+                  <div th:if="${status == 'Closed'}" style="background-color: #00008b; color: #fff; padding: 10px; border-radius: 5px; text-align: center; font-weight: bold; font-size: 18px; margin-top: 24px;">
+                    <p>Attraction Closed</p>
+                  </div>
+
+                  <div th:if="${status == 'Open'}" id="barChart"></div>
 
                 </div>
               </div>
@@ -577,12 +588,18 @@
             <div class="card-body">
               <h5 class="card-title">Waiting Time</h5>
 
-              <div class="d-flex align-items-center">
+              <div th:if="${status == 'Open'}" class="d-flex align-items-center">
                 <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                   <i class="bi bi-clock"></i>
                 </div>
                 <div class="ps-3">
                   <h6 id="waitingTime"> </h6>
+                </div>
+              </div>
+
+              <div th:if="${status == 'Closed'}" class="d-flex align-items-center">
+                <div style="background-color: #00008b; color: #fff; padding: 10px; border-radius: 5px; text-align: center; font-weight: bold; font-size: 18px;">
+                  <p>Attraction Closed</p>
                 </div>
               </div>
 
