--- a/WaltDisneyManagement/src/main/resources/templates/attraction.html
+++ b/WaltDisneyManagement/src/main/resources/templates/attraction.html
@@ -718,7 +718,7 @@
 
                 <th:block th:each="history : ${maintenanceHistory}">
                   <div class="activity-item d-flex">
-                    <div class="activite-label" th:text="${history.date}"></div>
+                    <div class="activite-label" th:text="${history.technician + ' - ' + history.date}"></div>
                     <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
                     <div class="activity-content" th:text="${history.description}"></div>
                   </div><!-- End activity item-->
