--- a/WaltDisneyManagement/src/main/resources/templates/AnimalKingdom.html
+++ b/WaltDisneyManagement/src/main/resources/templates/AnimalKingdom.html
@@ -452,7 +452,7 @@
               <a>
                 <div class="card info-card customers-card" data-attraction="Dinosaur" style="cursor: pointer; background-image: url('/img/hauntedmansion.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">DINOSAUR</h5>
+                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Dinosaur</h5>
                   </div>
                 </div>
               </a>
