--- a/WaltDisneyManagement/src/main/resources/templates/AnimalKingdom.html
+++ b/WaltDisneyManagement/src/main/resources/templates/AnimalKingdom.html
@@ -426,7 +426,7 @@
             <!-- TriceraTop Spin -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="TriceraTop Spin" style="cursor: pointer; background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="TriceraTop Spin" style="cursor: pointer; background-image: url('/img/TriceraTopSpin.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">TriceraTop Spin</h5>
                   </div>
@@ -438,7 +438,7 @@
             <!-- Kali River Rapids  -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Kali River Rapids" style="cursor: pointer; background-image: url('/img/PiratesoftheCaribbean.jpeg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Kali River Rapids" style="cursor: pointer; background-image: url('/img/kali-rapids.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Kali River Rapids</h5>
                   </div>
@@ -450,7 +450,7 @@
             <!-- DINOSAUR -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Dinosaur" style="cursor: pointer; background-image: url('/img/hauntedmansion.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Dinosaur" style="cursor: pointer; background-image: url('/img/dinosaus.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Dinosaur</h5>
                   </div>
