--- a/WaltDisneyManagement/src/main/resources/templates/BlizzardBeach.html
+++ b/WaltDisneyManagement/src/main/resources/templates/BlizzardBeach.html
@@ -426,7 +426,7 @@
             <!-- Summit Plummet -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Summit Plummet" style="cursor: pointer; background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Summit Plummet" style="cursor: pointer; background-image: url('/img/blizzardbeach.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Summit Plummet</h5>
                   </div>
@@ -438,7 +438,7 @@
             <!-- Slush Gusher -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Slush Gusher" style="cursor: pointer; background-image: url('/img/PiratesoftheCaribbean.jpeg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Slush Gusher" style="cursor: pointer; background-image: url('/img/slush-gusher.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Slush Gusher</h5>
                   </div>
