--- a/WaltDisneyManagement/src/main/resources/templates/DisneySprings.html
+++ b/WaltDisneyManagement/src/main/resources/templates/DisneySprings.html
@@ -426,7 +426,7 @@
             <!-- Marketplace Train Express -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Marketplace Train Express" style="cursor: pointer; background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Marketplace Train Express" style="cursor: pointer; background-image: url('/img/marketplaceTrain.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Marketplace Train Express</h5>
                   </div>
@@ -438,7 +438,7 @@
             <!-- Classic Carousel -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Classic Carousel" style="cursor: pointer; background-image: url('/img/PiratesoftheCaribbean.jpeg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Classic Carousel" style="cursor: pointer; background-image: url('/img/ClassicCarousel.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Classic Carousel</h5>
                   </div>
