--- a/WaltDisneyManagement/src/main/resources/templates/Epcot.html
+++ b/WaltDisneyManagement/src/main/resources/templates/Epcot.html
@@ -426,7 +426,7 @@
             <!-- Spaceship Earth -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Spaceship Earth" style="cursor: pointer; background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Spaceship Earth" style="cursor: pointer; background-image: url('/img/SpaceshipEarth.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Spaceship Earth</h5>
                   </div>
@@ -438,7 +438,7 @@
             <!-- Guardians of the Galaxy: Cosmic Rewind -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Guardians of the Galaxy: Cosmic Rewind" style="cursor: pointer; background-image: url('/img/PiratesoftheCaribbean.jpeg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Guardians of the Galaxy: Cosmic Rewind" style="cursor: pointer; background-image: url('/img/disney-guardians-of-the-galaxy.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Guardians of the Galaxy: Cosmic Rewind</h5>
                   </div>
@@ -450,7 +450,7 @@
             <!-- Test Track -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Test Track" style="cursor: pointer; background-image: url('/img/hauntedmansion.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Test Track" style="cursor: pointer; background-image: url('/img/test_tracker.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Test Track</h5>
                   </div>
