--- a/WaltDisneyManagement/src/main/resources/templates/HollywoodStudios.html
+++ b/WaltDisneyManagement/src/main/resources/templates/HollywoodStudios.html
@@ -426,7 +426,7 @@
             <!-- Mickey & Minnie's Runaway Railway -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Mickey & Minnie's Runaway Railway" style="cursor: pointer; background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Mickey & Minnie's Runaway Railway" style="cursor: pointer; background-image: url('/img/MickeyRunawayRailway.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Mickey & Minnie's Runaway Railway</h5>
                   </div>
@@ -438,7 +438,7 @@
             <!-- Rock ‘n’ Roller Coaster -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Rock n Roller Coaster" style="cursor: pointer; background-image: url('/img/PiratesoftheCaribbean.jpeg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Rock n Roller Coaster" style="cursor: pointer; background-image: url('/img/rock.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Rock n Roller Coaster</h5>
                   </div>
