--- a/WaltDisneyManagement/src/main/resources/templates/TyphoonLagoon.html
+++ b/WaltDisneyManagement/src/main/resources/templates/TyphoonLagoon.html
@@ -426,7 +426,7 @@
             <!-- Gangplank Falls -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Gangplank Falls" style="cursor: pointer; background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Gangplank Falls" style="cursor: pointer; background-image: url('/img/maxresdefault.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Gangplank Falls</h5>
                   </div>
@@ -438,7 +438,7 @@
             <!-- Humunga Kowabunga -->
             <div class="col-xxl-4 col-xl-12">
               <a>
-                <div class="card info-card customers-card" data-attraction="Humunga Kowabunga" style="cursor: pointer; background-image: url('/img/PiratesoftheCaribbean.jpeg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-attraction="Humunga Kowabunga" style="cursor: pointer; background-image: url('/img/Humunga Kowabunga.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Humunga Kowabunga</h5>
                   </div>
